# robota

./: .gitignore  CMakeLists.txt  README.md
Assets/: Arwing.gpmesh  Cube.gpmesh  Cursor.aseprite  Cursor.blend  Cursor.blend1  Cursor.gpmesh  Laser.gpmesh  Particle.gpmesh  ROBOTA.blend  ROBOTA.blend1  Roboto.aseprite  Roboto.blend  Roboto.blend1  Roboto.gpmesh  RobotsBase.blend  RobotsBase.blend1  Tile.aseprite  Tile.blend  Tile.blend1  Tile.gpmesh  TilesTextures.aseprite  gpmesh_export_v2.py
Assets/Arena/: SkyboxArena.gpmesh
Assets/Boxes/: Barrel.blend  Barrel.blend1  Barrel.gpmesh  Grass.gpmesh  Stop.blend  Stop.blend1  Stop.gpmesh  TrashCan1.blend  TrashCan1.blend1  TrashCan1.gpmesh  Tree.blend  Tree.gpmesh  Wheel.blend  Wheel.gpmesh
Assets/Sounds/: license.txt
Assets/Textures/: barrel.aseprite  smoke.aseprite
Saves/: PlayerBuild.json
Shaders/: Mesh.frag  Mesh.vert  Particle.frag  Particle.vert
Source/: AudioSystem.cpp  AudioSystem.h  Camera.cpp  Camera.h  Game.cpp  Game.h  Main.cpp  Math.h  ParticleManager.cpp  ParticleManager.h
Source/Actors/: Actor.cpp  Actor.h  Block.cpp  Block.h  BlockObstacle.cpp  BlockObstacle.h  Destructible.cpp  Destructible.h  GridCursor.cpp  GridCursor.h  Robot.cpp  Robot.h  RobotVFXManager.cpp  RobotVFXManager.h  Ship.cpp  Ship.h  SkillSystem.cpp  SkillSystem.h  Skybox.cpp  Skybox.h  Tile.cpp  Tile.h
Source/IA/: IA.cpp  IA.h
Source/Levels/: AI.cpp  AI.h  Level.cpp  Level.h  Level0.cpp  Level0.h  Level1.cpp  Level1.h  Level2.cpp  Level2.h  Level3.cpp  Level3.h
Source/Map/: GridMap.cpp  GridMap.h  TerrainType.h
(+157 files in other folders)
